--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ es.port=
 es.protocol=
 es.username=
 es.password=
+
+# Configuration de Spring MVC pour la gestion des exceptions
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
