Ajout facettes theses

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ es.theses.indexname=
 # Configuration de Spring MVC pour la gestion des exceptions
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
+
+theses.listFacets={'Accessible en ligne':'accessible', 'Statut':'status', 'Etablissements':'etabSoutenanceN.exact', 'Disciplines':'discipline.tri', 'Langues':'langues'}
