--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,7 @@ es.theses.indexname=
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
-theses.listFacets={'Accessible en ligne':'accessible', 'Statut':'status', 'Etablissements':'etabSoutenanceN.exact', 'Disciplines':'discipline.tri', 'Langues':'langues'}
+#Liste dynamique des facets à remonter, sous forme Libellé : Champ ES
+theses.listFacets={'Accessible en ligne':'accessible', 'Statut':'status', 'Etablissements':'etabSoutenanceN.exact', 'Disciplines':'discipline.exact', 'Langues':'langues'}
+#Liste des sous-facets, sous forme parent (libellé) : enfant (champ)
+theses.subFacets={'soutenue': 'accessible'}
