--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,11 @@
 facets:
-  main:
+  mainTheses:
     - libelle: Statut
       champ: status
       searchBar: false
     - libelle: Etablissements
       champ: etabSoutenanceN.exact
+      searchBar: true
     - libelle: Domaines thématique
       champ: oaiSetNames
       searchBar: true
@@ -17,7 +18,11 @@ facets:
     - libelle: Ecole doctorale
       champ: ecolesDoctoralesN.exact
       searchBar: true
-  subs:
+  subsTheses:
     - libelle: Accessible en ligne
       champ: accessible
       parentName: soutenue
+  mainPersonnes:
+    - libelle: Role
+      champ: roles
+      searchBar: true
