--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,14 +3,14 @@ facets:
     - libelle: Statut
       champ: status
       searchBar: false
-    - libelle: Etablissements
+    - libelle: Établissements
       champ: etabSoutenanceN.exact
       searchBar: true
     - libelle: Domaines thématiques
       champ: oaiSetNames
       searchBar: true
     - libelle: Disciplines
-      champ: discipline.exact
+      champ: discipline.raw
       searchBar: true
     - libelle: Langues
       champ: langues
@@ -19,7 +19,7 @@ facets:
       champ: ecolesDoctoralesN.exact
       searchBar: true
   subsTheses:
-    - libelle: Accessible en ligne
+    - libelle: Accessibles en ligne
       champ: accessible
       parentName: soutenue
   mainPersonnes:
