ajout valeurs défaut dans application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-server.port=
-es.hostname=
-es.hostname2=
-es.hostname3=
-es.hostname4=
-es.port=
-es.protocol=
-es.username=
-es.password=
-es.theses.indexname=
-es.personnes.indexname=
+server.port=8080
+es.hostname=aa
+es.hostname2=aa
+es.hostname3=aa
+es.hostname4=aa
+es.port=10
+es.protocol=aa
+es.username=aa
+es.password=aa
+es.theses.indexname=aa
+es.personnes.indexname=aa
 # Configuration de Spring MVC pour la gestion des exceptions
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
