Ajout mail feedback theses + recaptcha V3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,12 @@ es.personnes.recherche.indexname=aa
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 maxfacetsvalues=4000
+spring.datasource.url=jdbc:mysql://localhost/test
+spring.datasource.username=dbuser
+spring.datasource.password=dbpass
+google.recaptcha.key.site=XXX
+google.recaptcha.key.secret=XXX
+google.recaptcha.key.threshold=0.7
+theses.mail=xxxx@abes.fr
+mail.ws=url
+
