--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,11 @@
             <artifactId>ojdbc8</artifactId>
             <version>21.6.0.0.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>co.elastic.clients</groupId>
             <artifactId>elasticsearch-java</artifactId>
