--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ es.personnes.recherche.indexname=aa
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 maxfacetsvalues=4000
-spring.datasource.url=jdbc:mysql://localhost/test
+spring.datasource.url=
 spring.datasource.username=dbuser
 spring.datasource.password=dbpass
 google.recaptcha.key.site=XXX
