ajout du paramètre de niveau de log

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,5 @@ mail.ws=url
 
 maintenance=false
 maintenance.message=Service en maintenance. Veuillez reessayer plus tard. Service in maintenance. Please try again later
+logging.level.fr.abes=
 
