refactor: extract movies url in environment variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,4 @@ maintenance=false
 maintenance.message=Service en maintenance. Veuillez reessayer plus tard. Service in maintenance. Please try again later
 logging.level.fr.abes=
 
+movies.assistance_deportee.url=https://movies.abes.fr/api-git/abes-esr/movies-api/subdir/v1//TH_assistance_deportee.json?ppnEtab=
